--- a/src/app/student/interaction-student-teacher/content-interaction-student/content-interaction-student.component.css
+++ b/src/app/student/interaction-student-teacher/content-interaction-student/content-interaction-student.component.css
@@ -2,4 +2,13 @@
   background: #435d7d;
   color: #fff;
 }
-
+pre {
+  font-size: 1rem;
+}
+#comment{
+  height: 350px;
+  overflow-y: auto;
+}
+*{
+  box-sizing: border-box;
+}
