--- a/src/app/teacher/student-group-management/management-student-group/management-student-group.component.html
+++ b/src/app/teacher/student-group-management/management-student-group/management-student-group.component.html
@@ -17,7 +17,9 @@
         <tbody>
         <tr
           *ngFor="let list of groupList|paginate: { itemsPerPage: 4, currentPage: p}, let i = index">
-          <td>{{i + 1}}</td>
+          <td>
+            <span *ngIf="test == 'first'">{{i + 1}}</span>
+            <span *ngIf="test != 'first'">{{(i + 1) + (p - 1) * 4}}</span></td>
           <td>{{list.groupName}}</td>
           <td style="margin-left: 50px;">{{list.quantity}}</td>
           <td>
@@ -29,8 +31,8 @@
         </tr>
         </tbody>
       </table>
-      <div class="mt-3 d-flex justify-content-end">
-        <pagination-controls (pageChange)="p = $event" previousLabel="Trước" nextLabel="Sau"
+      <div class="mt-3 d-flex justify-content-end" *ngIf="this.groupList.length !== 0">
+        <pagination-controls (click)="changePage(p)" (pageChange)="p = $event" previousLabel="Trước" nextLabel="Sau"
                              responsive="true"></pagination-controls>
       </div>
     </div>
