--- a/src/app/teacher/student-group-management/message-group-student/message-group-student.component.html
+++ b/src/app/teacher/student-group-management/message-group-student/message-group-student.component.html
@@ -1,7 +1,10 @@
-<div>
-  <a class="text-success" style="margin-left: 40%"><span><i style="font-size: 90px"  class="fa fa-check"></i></span> </a>
-  <hr class="border">
-  <p *ngIf="message == 1"></p>
-  <h2 class="text-center">Xóa thành công!</h2>
+<div *ngIf="message == 'OK'">
+  <h2 class="text-center">Xóa nhóm thành công</h2>
+</div>
+<div *ngIf="message == 'NotOK'">
+  <h2 class="text-center">Nhóm này đang thực hiện đề tài nên không thể xóa!</h2>
+</div>
+<div class="row d-flex align-items-center" style="margin-left: 160px">
+  <button mat-dialog-close class="btn btn-primary ml-5 mt-5" (click)="loadList()">Đóng</button>
 </div>
 
