--- a/src/app/student/student-delete/student-delete.component.html
+++ b/src/app/student/student-delete/student-delete.component.html
@@ -1,5 +1,5 @@
-<div class="modal-header">
-  <h4 class="modal-title text-danger offset-2">Xác nhận xoá sinh viên</h4>
+<div class="modal-header d-flex justify-content-center">
+  <h2 class="modal-title">XÁC NHẬN XOÁ SINH VIÊN</h2>
 </div>
 <div class="modal-body">
   <div class="form-row">
