--- a/src/app/student/list-student/list-student.component.html
+++ b/src/app/student/list-student/list-student.component.html
@@ -7,15 +7,15 @@
             <h2><b>DANH SÁCH SINH VIÊN</b></h2>
           </div>
         </div>
-        <div class="row col-sm-12 col-xl-12 d-flex form-inline">
-          <div class="col-sm-6 col-xl-6 col-lg-6 col-md-6 d-flex justify-content-bottom form-inline mt-2">
-            <a class="btn btn-success" data-toggle="modal" (click)="openDialogCreate()" ><i
-              class="material-icons">&#xE147; </i><span>Thêm mới sinh viên</span></a>
+        <div class="row col-sm-12 col-xl-12">
+          <div class="col-sm-6 d-flex justify-content-bottom form-inline mt-2">
+            <a class="row btn btn-success" data-toggle="modal" (click)="openDialogCreate()"><i
+              class="material-icons">&#xE147;</i><span>Thêm mới sinh viên</span></a>
           </div>
-          <div class="row col-sm-6 col-xl-6 col-lg-6 col-md-6 d-flex justify-content-end form-inline">
-            <input type="text" class="form-control form-control-sm rounded mt-2"
+          <div class=" col-sm-6 d-flex justify-content-end form-inline">
+            <input type="text" class=" form-control form-control-sm rounded mt-2"
                    placeholder="Nhập từ khóa tìm kiếm" (keydown.enter)="search()" [(ngModel)]="valueSearch" #value>
-            <button type="button" class="search btn btn-info mt-2" (click)="search()" >
+            <button type="button" class="search btn btn-info mt-2" (click)="search()">
               <i class="fa fa-search"></i></button>
           </div>
         </div>
@@ -25,22 +25,22 @@
         <ng-template #block>
           <small class="font-weight-bold">Tổng số thành viên là: 0</small>
         </ng-template>
-        <table class=" table table-striped table-hover"   >
+        <table class=" table table-striped table-hover">
           <thead>
           <tr>
             <th class="abc" style="width: 2%">STT</th>
             <th style="width : 7%">Mã SV</th>
-            <th style="width: 18%">Họ và tên</th>
+            <th style="width: 20%">Họ và tên</th>
             <th style="width: 11%">Tên đề tài</th>
             <th style="width: 18%">Tên giáo viên</th>
-            <th>Email</th>
+            <th style="width: 20%">Email</th>
             <th class="text-right" style="width: 5%">Điện Thoại</th>
             <th style="width: 10%">Tác vụ</th>
           </tr>
           </thead>
           <tbody *ngIf="list; else blockList">
           <tr *ngFor="let student of list |paginate: { itemsPerPage: 5, currentPage: p} , let i = index">
-            <td style="text-align: right">{{i + 1}}</td>
+            <td style="text-align: center">{{i + 1}}</td>
             <td>{{student.studentCode}}</td>
             <td style="text-align: left">{{student.fullName}}</td>
             <td *ngIf="student.studentGroup != null">{{student.studentGroup.checkThesis.thesis.statement}}</td>
