--- a/src/app/student/subscribe-thesis/notification-subscribe/notification-subscribe.component.html
+++ b/src/app/student/subscribe-thesis/notification-subscribe/notification-subscribe.component.html
@@ -47,5 +47,5 @@
   <h1>Bạn không có quyền hủy đăng ký đề tài.</h1>
 </div>
 <div class="row justify-content-end">
-  <button mat-dialog-close class="btn btn-primary">OK</button>
+  <button mat-dialog-close (click)="close()" class="btn btn-primary">OK</button>
 </div>
