--- a/src/app/teacher/list-student-no-group/list-student-no-group.component.html
+++ b/src/app/teacher/list-student-no-group/list-student-no-group.component.html
@@ -1,9 +1,10 @@
+
 <div class=" form-group row mt-4">
   <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 align-self-center">
     <label style=" font-family: 'Varela Round', sans-serif;" for="input-search"> Tìm Kiếm Sinh Viên:</label>
   </div>
-  <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-    <select class="form-control" [(ngModel)]="by">
+  <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3" >
+    <select style="cursor: pointer" class="form-control" [(ngModel)]="by">
       <option selected disabled>Chọn Mục Tìm Kiếm</option>
       <option value="all">Tất Cả</option>
       <option value="email">Email</option>
@@ -12,11 +13,12 @@
     </select>
   </div>
   <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
-    <input [(ngModel)]="search" class="form-control" type="text" id="input-search" style="width: 100%"
-           placeholder="&#xF002; Search" style="font-family:Arial, FontAwesome" placeholder="&#xF002;">
+    <input (keydown.enter)="findStudent()" [(ngModel)]="search" class="form-control inp" type="search" id="input-search" style="width: 100%"
+           placeholder="&#xF002; Search " style="font-family:Arial, FontAwesome;cursor: pointer" placeholder="&#xF002;">
+
   </div>
   <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
-    <button type="button" (click)="findStudent()"
+    <button type="submit" (click)="findStudent()"
             class="btn btn-primary">Tìm Kiếm
     </button>
   </div>
@@ -37,17 +39,15 @@
         <thead>
         <tr>
           <th>STT</th>
-          <th>Mã SV</th>
-          <th>Tên SV</th>
-          <th>Email</th>
-          <th>Thêm</th>
+          <th style="padding-left: 95px">Mã SV</th>
+          <th style="padding-left: 45px">Tên SV</th>
+          <th style="padding-left: 58px">Email</th>
+          <th style="text-align: center">Thêm</th>
         </tr>
         </thead>
         <tbody>
-
-
         <tr *ngFor="let st of studentList    | paginate: { itemsPerPage: 5, currentPage: p }; let i = index ">
-          <td >
+          <td style="padding-left: 25px">
             <ng-container *ngIf="test == 'first' else elseBlock1">
               {{i + 1}}
             </ng-container>
@@ -55,10 +55,10 @@
               {{(i + 1) + (p - 1) * 5}}
             </ng-template>
           </td>
-          <td>{{st?.studentCode}}</td>
-          <td >{{st?.fullName}}</td>
+          <td style="padding-left: 89px">{{st?.studentCode}}</td>
+          <td style="padding-left: 30px" >{{st?.fullName}}</td>
           <td>{{st?.email}}</td>
-          <td><a (click)="getInfo(st.id,i)" style="color: #0c7ed7"><i
+          <td style="text-align: center"><a (click)="getInfo(st.id)" style="color: #0c7ed7"><i
             class="material-icons"
             data-toggle="tooltip" title="Add">&#xf23a;</i></a></td>
         </tr>
