--- a/src/app/teacher/thesis/delete-thesis/delete-thesis.component.html
+++ b/src/app/teacher/thesis/delete-thesis/delete-thesis.component.html
@@ -1,9 +1,9 @@
 <div >
   <h2 class="d-flex justify-content-center " > XÁC NHẬN XÓA </h2>
   <hr>
-  <h3 class="my-3 font-weight-bold">Bạn có chắc chắn muốn xóa đề tài này không "
-    <span style="color: red">{{thesis.statement}}</span> "</h3>
-  <p style="color: deeppink">Hành động này không thể hoàn tác !</p>
+  <h3 class="my-3 font-weight-bold">Bạn có chắc chắn muốn xóa đề tài này không"
+    <span style="color: red">{{thesis.statement}}</span>"</h3>
+  <p>Hành động này không thể hoàn tác!</p>
   <hr>
   <div class="row d-flex justify-content-center">
 
