--- a/src/app/teacher/thesis/detail-thesis/detail-thesis.component.html
+++ b/src/app/teacher/thesis/detail-thesis/detail-thesis.component.html
@@ -14,6 +14,10 @@
     <span type="email" class="form-control">{{detail.createDate | date: 'dd-MM-yyyy'}}</span>
   </div>
   <div class="form-group">
+    <label>Giáo viên khởi tạo</label>
+    <span type="email" class="form-control">{{detail.teacher.fullName}}</span>
+  </div>
+  <div class="form-group">
     <label>Nội dung</label>
     <textarea class="form-control" rows="3"style="resize: none" readonly>{{detail.description}}</textarea>
   </div>
