--- a/src/app/teacher/thesis/list-thesis/list-thesis.component.html
+++ b/src/app/teacher/thesis/list-thesis/list-thesis.component.html
@@ -16,20 +16,18 @@
             </button>
           </div>
           <div class="col-md">
-<!--            <label for="nguoiMua">Số sinh viên thực hành</label>-->
-<!--            <input type="number" class="form-control" id="nguoiMua" formControlName="amount">-->
           </div>
         </div>
       </form>
       <br><br>
       <button class="btn btn-success" (click)="openCreateDialog()">Thêm mới</button>
       <br><br>
-      <table class="table table-hover">
-        <thead class="table-hover">
+      <table class="table table-striped">
+        <thead class="table-striped">
         <tr>
           <th>STT</th>
           <th>Tên Đề Tài</th>
-          <th>Số SVTH</th>
+          <th class="offset-4 ml-2">Số SVTH</th>
           <th>Chi Tiết</th>
           <th>Ghi Chú</th>
         </tr>
