--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -90,6 +90,9 @@
           <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
             <div class="card-body">
               <ul class="list-group">
+                <li class="list-group-item"><a class="nav-link" [routerLink]="['/teacher/teacher-list']"><i class="fa fa-users" aria-hidden="true"></i>
+                  Danh sách giảng viên
+                </a></li>
                 <li class="list-group-item"><a href="#"><i class="fa fa-pencil"></i> Edit Info</a></li>
                 <li class="list-group-item"><a href="#"><i class="fa fa-key"></i> Change Password</a>
                 </li>
