test-vinh xong task

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,201 +1,14 @@
-<!--Nav-bar-->
-<nav class="navbar navbar-expand-xl navbar-light bg-light">
-  <a href="#" class="navbar-brand"><i class="fa fa-cube"></i>C06<b>20G1</b></a>
-  <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <!-- Collection of nav links, forms, and other content for toggling -->
-  <div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
-    <div class="navbar-nav mx-3 justify-content-center">
-      <a href="#" class="nav-item nav-link active">Trang Chủ</a>
-      <a href="#" class="nav-item nav-link">Tin Tức</a>
-      <div class="navbar-nav ml-auto">
-        <div class="nav-item dropdown">
-          <a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle user-action"> Giáo Viên<b
-            class="caret"></b></a>
-          <div class="dropdown-menu">
-            <a href="#" class="dropdown-item"><i class="fa fa-bell-o" aria-hidden="true"></i> Đăng thông báo</a>
-            <a href="#" class="dropdown-item"><i class="fa fa-list-alt" aria-hidden="true"></i>Danh sách đề
-              tài</a>
-            <a href="#" class="dropdown-item"><i class="fa fa-check-square-o" aria-hidden="true"></i> Kiểm
-              duyệt đề tài</a>
-            <a href="#" class="dropdown-item"><i class="fa fa-users" aria-hidden="true"></i> Danh
-              sách sinh viên</a>
-            <a routerLink="/teacher/thesis-detail-list" class="dropdown-item"><i class="fa fa-spinner" aria-hidden="true"></i> Quản
-              lý tiến độ</a>
-            <a routerLink="/teacher/feed-back" class="dropdown-item"><i class="fa fa-commenting" aria-hidden="true"></i>Thắc
-              mắc sinh viên</a>
-            <a routerLink="/teacher/instruction" class="dropdown-item"><i class="fa fa-book" aria-hidden="true"></i>Tài
-              liệu hướng dẫn</a>
-            <div class="dropdown-divider"></div>
-          </div>
-        </div>
-      </div>
-      <div class="navbar-nav ml-auto">
-        <div class="nav-item dropdown">
-          <a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle user-action"> Sinh Viên <b
-            class="caret"></b></a>
-          <div class="dropdown-menu">
-            <a href="#" class="dropdown-item"><i class="fa fa-file" aria-hidden="true"></i>Nộp luận
-              văn</a>
-            <a routerLink="/student/send-thesis-detail" class="dropdown-item"><i class="fa fa-file"
-                                                                                 aria-hidden="true"></i>Báo cáo tiến độ</a>
-            <a href="#" class="dropdown-item"><i class="fa fa-key" aria-hidden="true"></i>Đổi mật
-              khẩu</a>
-            <a href="#" class="dropdown-item"><i class="fa fa-info-circle" aria-hidden="true"></i> Thay
-              đổi thông tin</a>
-            <div class="dropdown-divider"></div>
-            <a href="#" class="dropdown-item"><i class="material-icons">&#xE8AC;</i> Đăng Xuất</a>
-          </div>
-        </div>
-      </div>
-      <a href="#" class="nav-item nav-link">Liên Hệ</a>
-    </div>
-    <div class="navbar-nav ml-auto mr-3">
-      <a href="#" class="nav-item nav-link notifications"><i class="fa fa-bell-o"></i><span
-        class="badge">1</span></a>
-      <div class="nav-item dropdown">
-        <a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle user-action"> Nguyễn Quốc Khánh
-          <b class="caret"></b></a>
-        <div class="dropdown-menu">
-          <a href="#" class="dropdown-item"><i class="fa fa-user-o"></i> Thông tin</a>
-          <a href="#changePassword" data-toggle="modal" class="dropdown-item"><i class="fa fa-key"
-                                                                                 aria-hidden="true"></i>Đổi
-            mật
-            khẩu</a>
-          <a href="#ModalExample" data-toggle="modal" class="dropdown-item" l><i class="fa fa-info-circle"
-                                                                                 aria-hidden="true"></i> Thay
-            đổi
-            thông tin</a>
-          <div class="dropdown-divider"></div>
-          <a href="#" class="dropdown-item"><i class="material-icons">&#xE8AC;</i> Đăng Xuất</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</nav>
+<app-nav-bar></app-nav-bar>
 <div class="container-fluid my-0 " id="container">
   <div class="row p-1">
-    <!--    Side-bar-->
     <div class="col-lg-9 mt-2 mb-3">
       <router-outlet></router-outlet>
     </div>
+    <!--    Side-bar-->
     <div class="col-lg-3">
-      <div class="accordion " id="accordionExample">
-        <div class="card">
-          <div class="card-header" id="headingOne">
-            <h2 class="mb-0">
-              <a data-toggle="collapse" data-target="#collapseOne" aria-expanded="false"
-                 aria-controls="collapseOne">
-                <span><i class="fa fa-user"></i> Quản lý giáo viên</span>
-                <i class="fa fa-chevron-down toggle"></i>
-              </a>
-            </h2>
-          </div>
-          <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-            <div class="card-body">
-              <ul class="list-group">
-                <li class="list-group-item"><a href="#"><i class="fa fa-pencil"></i> Edit Info</a></li>
-                <li class="list-group-item"><a href="#"><i class="fa fa-key"></i> Change Password</a>
-                </li>
-                <li class="list-group-item"><a href="#" class="text-danger"><i class="fa fa-trash"></i>
-                  Delete Account</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-header" id="headingTwo">
-            <h2 class="mb-0">
-              <a data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false"
-                 aria-controls="collapseTwo">
-                <span><i class="fa fa-graduation-cap" aria-hidden="true"></i> Quản lý sinh viên</span>
-                <i class="fa fa-chevron-down toggle rotate"></i>
-              </a>
-            </h2>
-          </div>
-          <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo"
-               data-parent="#accordionExample">
-            <div class="card-body">
-              <ul class="list-group">
-                <li class="list-group-item"><a href="#"><i class="fa fa-users" aria-hidden="true"></i>
-                  Danh sách sinh viên
-                </a></li>
-                <li class="list-group-item"><a href="#"><i class="fa fa-address-card"
-                                                           aria-hidden="true"></i>Thêm thông tin
-                  sinh viên</a></li>
-                <li class="list-group-item"><a href="#"><i class="fa fa-pencil" aria-hidden="true"></i>
-                  Sửa thông tin
-                  sinh viên </a></li>
-                <li class="list-group-item"><a href="#"><i class="fa fa-trash" aria-hidden="true"></i>Xóa
-                  thông tin sinh
-                  viên</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-header" id="headingThree">
-            <h2 class="mb-0">
-              <a data-toggle="collapse" data-target="#collapseThree" aria-expanded="false"
-                 aria-controls="collapseThree">
-                <span><i class="fa fa-users" aria-hidden="true"></i> Quản lý nhóm</span>
-                <i class="fa fa-chevron-down toggle"></i>
-              </a>
-            </h2>
-          </div>
-          <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
-               data-parent="#accordionExample">
-            <div class="card-body">
-              <ul class="list-group">
-                <li class="list-group-item"><a href="#"><i class="fa fa-dollar"></i> Sales</a></li>
-                <li class="list-group-item"><a href="#"><i class="fa fa-tags"></i> Orders</a></li>
-                <li class="list-group-item"><a href="#"><i class="fa fa-plane"></i> Shipment</a></li>
-                <li class="list-group-item"><a href="#"><i class="fa fa-users"></i> Customers</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-header" id="headingFour">
-            <h2 class="mb-0">
-              <a data-toggle="collapse" data-target="#collapseFour" aria-expanded="false"
-                 aria-controls="collapseFour">
-                <span><i class="fa fa-book" aria-hidden="true"></i>Quản lý đề tài</span>
-                <i class="fa fa-chevron-down toggle"></i>
-              </a>
-            </h2>
-          </div>
-          <div id="collapseFour" class="collapse" aria-labelledby="headingFour"
-               data-parent="#accordionExample">
-            <div class="card-body">
-              <ul class="list-group">
-                <li class="list-group-item"><a href="#"><i class="fa fa-font"></i> Typography</a></li>
-                <li class="list-group-item"><a href="#"><i class="fa fa-bell"></i> Notifications</a>
-                </li>
-                <li class="list-group-item"><a href="#"><i class="fa fa-map"></i> Maps</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-header" id="headingFive">
-            <h2 class="mb-0"><a href="#"><i class="fa fa-pie-chart" aria-hidden="true"></i> Thống kê</a>
-            </h2>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-header" id="headingSix">
-            <h2 class="mb-0"><a href="#myModal" data-toggle="modal"><i class="fa fa-sign-in"
-                                                                       aria-hidden="true"></i> Đăng
-              nhập</a></h2>
-            <!--                            <a href="#myModal" class="trigger-btn" >-->
-          </div>
-        </div>
-      </div>
+      <app-side-bar></app-side-bar>
     </div>
     <!--    End side bar-->
-
   </div>
 </div>
 
