--- a/src/app/nav-bar/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar/nav-bar.component.html
@@ -20,12 +20,12 @@
                 duyệt đề tài</a>
               <a href="#" class="dropdown-item"><i class="fa fa-users" aria-hidden="true"></i> Danh
                 sách sinh viên</a>
-              <a href="#" class="dropdown-item"><i class="fa fa-spinner" aria-hidden="true"></i> Quản
+              <a routerLink="/teacher/thesis-detail-list" class="dropdown-item"><i class="fa fa-spinner" aria-hidden="true"></i> Quản
                 lý tiến độ</a>
               <a routerLink="/teacher/feed-back" class="dropdown-item"><i class="fa fa-commenting"
                                                                           aria-hidden="true"></i>Thắc
                 mắc sinh viên</a>
-              <a href="#" class="dropdown-item"><i class="fa fa-book" aria-hidden="true"></i>Tài
+              <a routerLink="/teacher/instruction" class="dropdown-item"><i class="fa fa-book" aria-hidden="true"></i>Tài
                 liệu hướng dẫn</a>
               <div class="dropdown-divider"></div>
             </div>
@@ -38,6 +38,8 @@
             <div class="dropdown-menu">
               <a href="#" class="dropdown-item"><i class="fa fa-file" aria-hidden="true"></i>Nộp luận
                 văn</a>
+              <a routerLink="/student/send-thesis-detail" class="dropdown-item"><i class="fa fa-file"
+                                                                                   aria-hidden="true"></i>Báo cáo tiến độ</a>
               <a href="#" class="dropdown-item"><i class="fa fa-key" aria-hidden="true"></i>Đổi mật
                 khẩu</a>
               <a href="#" class="dropdown-item"><i class="fa fa-info-circle" aria-hidden="true"></i> Thay
