--- a/src/app/student/thesis-detail-send/thesis-detail-send.component.html
+++ b/src/app/student/thesis-detail-send/thesis-detail-send.component.html
@@ -31,3 +31,6 @@
   <input id="progress-upload" class="instruction__progress-percent" [value]=displayPercent disabled>
   <i id="upload-done" class="fa fa-check-circle instruction__progress-done" aria-hidden="true"></i>
 </div>
+<div class="upload-file__done">
+  <div style="color: white; font-size: 20px; font-family: Arial; padding: 10px">Đã tải file thành công</div>
+</div>
