--- a/src/app/student/thesis-detail-send/thesis-detail-send.component.css
+++ b/src/app/student/thesis-detail-send/thesis-detail-send.component.css
@@ -3,6 +3,17 @@
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+.upload-file__done{
+  position: fixed;
+  left: 5px;
+  bottom: 5px;
+  z-index: 100;
+  background-color: rgb(0, 247, 255);
+  width: 300px;
+  height: 60px;
+  border-radius: 5px;
+
+}
 
 .progress-report {
   position: relative;
