--- a/src/app/teacher/check-thesis/check-thesis.component.html
+++ b/src/app/teacher/check-thesis/check-thesis.component.html
@@ -21,7 +21,7 @@
           </tr>
           </thead>
           <tbody>
-          <tr *ngFor="let thesis of checkThesis |paginate: { itemsPerPage: 3, currentPage: p}, let i = index">
+          <tr *ngFor="let thesis of checkThesis, let i = index">
             <td class="table1">{{i + 1}}</td>
             <td class="table1">{{thesis.groupName}}</td>
             <td class="table1">{{thesis.quantity}}</td>
@@ -41,10 +41,10 @@
           </tr>
           </tbody>
         </table>
-        <div *ngIf="checkThesis.length > 0" align="end">
-          <pagination-controls (pageChange)="p = $event" previousLabel="Trước" nextLabel="Sau"
-                               responsive="true"></pagination-controls>
-        </div>
+<!--        <div *ngIf="checkThesis.length > 0" align="end">-->
+<!--          <pagination-controls (pageChange)="p = $event" previousLabel="Trước" nextLabel="Sau"-->
+<!--                               responsive="true"></pagination-controls>-->
+<!--        </div>-->
         <button class="thesis-button">Lưu</button>
       </form>
     </div>
