quoc_nt push 2/2

--- a/src/app/student/detail-news/detail-news.component.html
+++ b/src/app/student/detail-news/detail-news.component.html
@@ -23,20 +23,25 @@
         </p>
 
         <p style="text-align:center"><span style="font-family:times new roman,times,serif"><span
-          style="font-size:24px"><span style="color:rgb(47, 79, 79)">VĂN PHÒNG KHOA THÔNG BÁO&nbsp;</span></span></span>
+          style="font-size:18px"><span style="color:rgb(47, 79, 79)">VĂN PHÒNG KHOA THÔNG BÁO&nbsp;</span></span></span>
+        </p>
+        <hr>
+
+<!--        <p style="text-align:center"><span style="font-size:24px"><span-->
+<!--          style="color:rgb(47, 79, 79)"><strong><span-->
+<!--          style="font-size:18px;-->
+<!--          font-family:times new roman,serif">{{news?.content}}</span></strong></span></span>-->
+<!--        </p>-->
+        <p style="text-align:center"><span style="font-family:times new roman,times,serif"><span
+          style="font-size:18px"><span style="color:rgb(47, 79, 79)">{{news?.content}}&nbsp;</span></span></span>
         </p>
 
-        <p style="text-align:center"><span style="font-size:24px"><span
-          style="color:rgb(47, 79, 79)"><strong><span
-          style="font-family:times new roman,serif">{{news?.content}}</span></strong></span></span>
-        </p>
-
-        <p style="text-align:center"><span style="font-size:24px"><span
-          style="color:rgb(47, 79, 79)"><strong><span
-          style="font-family:times new roman,serif">KHÓA 2017&nbsp;</span></strong></span><span
-          style="color:rgb(47, 79, 79)"><strong><span
-          style="font-family:times new roman,serif">HỌC KỲ 1&nbsp;NĂM HỌC 2020 - 2021</span></strong></span></span>
-        </p>
+<!--        <p style="text-align:center"><span style="font-size:24px"><span-->
+<!--          style="color:rgb(47, 79, 79)"><strong><span-->
+<!--          style="font-family:times new roman,serif">KHÓA 2017&nbsp;</span></strong></span><span-->
+<!--          style="color:rgb(47, 79, 79)"><strong><span-->
+<!--          style="font-family:times new roman,serif">HỌC KỲ 1&nbsp;NĂM HỌC 2020 - 2021</span></strong></span></span>-->
+<!--        </p>-->
 
         <p style="text-align:center"><a [href]=news?.newsURL
          ><span
@@ -45,7 +50,7 @@
         </p>
 
         <p style="text-align:center"><span style="font-family:times new roman,times,serif"><span
-          style="font-size:24px"><span style="color:rgb(47, 79, 79)">VP KHOA CÔNG NGHỆ THÔNG TIN CODEGYM ĐÀ NẴNG</span></span></span>
+          style="font-size:18px"><span style="color:rgb(47, 79, 79)">VP KHOA CÔNG NGHỆ THÔNG TIN CODEGYM ĐÀ NẴNG</span></span></span>
         </p>
         <p></p></div>
     </div>
