--- a/src/app/teacher/teacher-management/teacher-list/teacher-list.component.html
+++ b/src/app/teacher/teacher-management/teacher-list/teacher-list.component.html
@@ -16,7 +16,7 @@
             </i><span style="font-size: 16px"> Thêm mới giáo viên</span></a>
           </div>
             <div class="row">
-          <div class="col-xl-9" style="margin-left: 300px">
+          <div class="col-xl-9" style="margin-left: 200px">
             <a href="#" class="btn-btn" (click)= ngOnInit() data-toggle="modal" style="color: white">
             <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" style="margin-left: 310px; margin-top: -80px" fill="currentColor" class="bi bi-arrow-counterclockwise" viewBox="0 0 16 16">
               <path fill-rule="evenodd" d="M8 3a5 5 0 1 1-4.546 2.914.5.5 0 0 0-.908-.417A6 6 0 1 0 8 2v1z"/>
@@ -32,12 +32,14 @@
             <form class="form-inline row" style="margin-top: -68px; margin-left: 540px">
               <input [(ngModel)]="key" name="key" class="form-control ml-0" type="search" placeholder="Nhập từ khóa"
                      aria-label="Search" style="width: 150px">
-              <a href="#" class="btn-btn" (click)=getTeacher() data-toggle="modal" style="color: white; margin-left: 10px"><svg
+              <a  href="#" class="btn-btn" (click)=getTeacher() data-toggle="modal" style="color: white; margin-left: 10px;position: relative;top: -30px;left: 132px;">
+                <svg
                 xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
                 class="bi bi-search" viewBox="0 0 16 16">
                 <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1
                                             1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-              </svg></a>
+              </svg>
+              </a>
             </form>
            </div>
             </div>
