--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -105,12 +105,10 @@
               <ul class="list-group">
                 <li class="list-group-item"><a href="#"><i class="fa fa-pencil"></i> Thay đổi thông tin</a></li>
                 <li class="list-group-item"><a href="#"><i class="fa fa-key"></i> Đổi mật khẩu</a></li>
-                <li class="list-group-item"><a class="nav-link" [routerLink]="['/teacher/teacher-list']"><i class="fa fa-users" aria-hidden="true"></i>
+                <li class="list-group-item"><a [routerLink]="['/teacher/teacher-list']"><i class="fa fa-users" aria-hidden="true"></i>
                   Danh sách giảng viên
                 </a></li>
 
-                <li class="list-group-item"><a href="#" class="text-danger"><i class="fa fa-trash"></i>
-                  Delete Account</a></li>
               </ul>
             </div>
           </div>
@@ -135,7 +133,6 @@
                 <li class="list-group-item"><a href="#" [routerLink]="['/student/student-list']"><i class="fa fa-users" aria-hidden="true"></i>
                   Danh sách sinh viên
                 </a></li>
-                <li class="list-group-item"><a href="#"><i class="fa fa-map"></i> Maps</a></li>
               </ul>
             </div>
           </div>
@@ -154,32 +151,10 @@
                data-parent="#accordionExample">
             <div class="card-body">
               <ul class="list-group">
-                <li class="list-group-item"><a href="#"><i class="fa fa-dollar"></i> Sales</a></li>
-                <li class="list-group-item"><a href="#"><i class="fa fa-tags"></i> Orders</a></li>
-                <li class="list-group-item"><a href="#"><i class="fa fa-plane"></i> Shipment</a></li>
-                <li class="list-group-item"><a href="#"><i class="fa fa-users"></i> Customers</a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-header" id="headingFour">
-            <h2 class="mb-0">
-              <a data-toggle="collapse" data-target="#collapseFour" aria-expanded="false"
-                 aria-controls="collapseFour">
-                <span><i class="fa fa-book" aria-hidden="true"></i>Đăng ký đề tài</span>
-                <i class="fa fa-chevron-down toggle"></i>
-              </a>
-            </h2>
-          </div>
-          <div id="collapseFour" class="collapse" aria-labelledby="headingFour"
-               data-parent="#accordionExample">
-            <div class="card-body">
-              <ul class="list-group">
-                <li class="list-group-item"><a href="#"><i class="fa fa-font"></i> Typography</a></li>
-                <li class="list-group-item"><a href="#"><i class="fa fa-bell"></i> Notifications</a>
-                </li>
-                <li class="list-group-item"><a href="#"><i class="fa fa-map"></i> Maps</a></li>
+                <li class="list-group-item"><a [routerLink]="['/teacher/student-group-list']" ><i class="fa fa-dollar"></i> Quản lý nhóm sinh viên</a></li>
+                <li class="list-group-item"><a [routerLink]="['/teacher/create-group']"><i class="fa fa-tags"></i> Tạo mới nhóm</a></li>
+                <li class="list-group-item"><a routerLink="/teacher/thesis-detail-list"><i class="fa fa-plane"></i> Quản lý tiến độ</a></li>
+                <li class="list-group-item"><a routerLink="/teacher/instruction"><i class="fa fa-users"></i> Tài liệu hướng dẫn</a></li>
               </ul>
             </div>
           </div>
