--- a/src/app/teacher/create-group/create-group.component.html
+++ b/src/app/teacher/create-group/create-group.component.html
@@ -5,14 +5,14 @@
 
       </div>
       <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-        <div class="row d-flex justify-content-center mt-4">
+<!--        <div class="row d-flex justify-content-center mt-4">-->
           <button (click)="onReset()" type="button"
                   class="btn btn-danger mr-4">Hủy Nhóm
           </button>
           <button type="button" (click)="callApi()"
                   class="btn btn-primary">Tạo Nhóm
           </button>
-        </div>
+<!--        </div>-->
       </div>
     </div>
     <div class="form-group row  mt-5">
